--- a/trabaja.html
+++ b/trabaja.html
@@ -2,53 +2,57 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Viewport corregido -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>FastGo - Trabaja con Nosotros</title>
   <link rel="shortcut icon" href="img/favicon.ico">
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.3/css/bootstrap.min.css">
+  <!-- Bootstrap 4.5.3 CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
   <!-- Estilos personalizados -->
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">
-        <img src="img/logo-fastgo.png" alt="FastGo" style="height:40px">
-        FastGo
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinksTrabaja" aria-controls="navLinksTrabaja" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navLinksTrabaja">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-          <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
-          <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-          <li class="nav-item active"><a class="nav-link" href="trabaja.html">Trabaja con Nosotros</a></li>
-        </ul>
-      </div>
+<!-- Navbar (idéntico a tu versión) -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">
+      <img src="img/logo-fastgo.png" alt="FastGo" style="height:40px">
+      FastGo
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks" aria-controls="navLinks" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navLinks">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+        <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
+        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+        <li class="nav-item active"><a class="nav-link" href="trabaja.html">Trabaja con Nosotros</a></li>
+        <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+        <li class="nav-item"><a class="nav-link" href="terminos.html">Términos</a></li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 
-  <!-- Contenido "Trabaja con Nosotros" -->
+  <!-- Contenido "Trabaja con Nosotros" (idéntico) -->
   <main class="container my-5">
     <h1 class="mb-4">Trabaja con Nosotros</h1>
     <p>¿Quieres formar parte de FastGo? Buscamos talento para expandir nuestro equipo en áreas de logística, atención al cliente y tecnología.</p>
     <a href="contacto.html" class="btn btn-lg btn-primary mt-3">Envía tu Solicitud</a>
   </main>
 
-  <!-- Footer -->
+  <!-- Footer (sin cambios) -->
   <footer class="footer bg-dark text-white py-4">
     <div class="container text-center">
       <p>&copy; 2025 FastGo. Todos los derechos reservados.</p>
     </div>
   </footer>
 
-  <!-- Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Scripts corregidos -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
