--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <!-- Bootstrap 4.5.3 CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
   
+  <!-- Fuente de Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+  
   <!-- Estilos personalizados -->
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -18,8 +21,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="img/logo-fastgo.png" alt="FastGo" style="height:40px">
-        FastGo
+        <img src="img/logo-fastgo.png" alt="FastGo" style="height:70px">
+        <span class="navbar-logo-text">FastGo</span> <!-- Agregamos una clase para el texto -->
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks" aria-controls="navLinks" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -100,3 +103,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
+
