--- a/nosotros.html
+++ b/nosotros.html
@@ -24,8 +24,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navLinks">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active"><a class="nav-link" href="index.html">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+        <li class="nav-item active"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
         <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
         <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
         <li class="nav-item"><a class="nav-link" href="trabaja.html">Trabaja con Nosotros</a></li>
