pulir el menu navbar

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <img src="img/logo-fastgo.png" alt="FastGo" style="height:70px">
-        <span class="navbar-logo-text">FastGo</span> <!-- Agregamos una clase para el texto -->
+        <span class="navbar-logo-text">FastGo</span> <!-- Asegúrate de que esté aquí -->
       </a>
+      
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks" aria-controls="navLinks" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
