--- a/contacto.html
+++ b/contacto.html
@@ -10,15 +10,20 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
   <!-- Estilos personalizados -->
   <link rel="stylesheet" href="css/styles.css">
+  <!-- Fuente de Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <!-- Navbar (idéntico a tu versión) -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
   <div class="container">
     <a class="navbar-brand" href="index.html">
-      <img src="img/logo-fastgo.png" alt="FastGo" style="height:40px">
-      FastGo
+      <img src="img/logo-fastgo.png" alt="FastGo" style="height:70px">
+      <span class="navbar-logo-text">FastGo</span> <!-- Asegúrate de que esté aquí -->
     </a>
+    
+    
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks" aria-controls="navLinks" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
