--- a/contacto.html
+++ b/contacto.html
@@ -12,9 +12,21 @@
   <link rel="stylesheet" href="css/styles.css">
   <!-- Fuente de Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
+  
+  <!-- Estilo para el mapa -->
+  <style>
+    #map {
+      height: 400px; /* Establecer la altura del mapa */
+      width: 100%;   /* El mapa ocupará todo el ancho disponible */
+    }
+  </style>
 
+  <!-- Cargar Leaflet -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 </head>
 <body>
+
 <!-- Navbar (idéntico a tu versión) -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
   <div class="container">
@@ -22,8 +34,6 @@
       <img src="img/logo-fastgo.png" alt="FastGo" style="height:70px">
       <span class="navbar-logo-text">FastGo</span> <!-- Asegúrate de que esté aquí -->
     </a>
-    
-    
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks" aria-controls="navLinks" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -41,46 +51,65 @@
   </div>
 </nav>
 
-  <!-- Contenido de Contacto (sin cambios) -->
-  <main class="container my-5">
-    <div class="row">
-      <!-- Formulario de Contacto -->
-      <div class="col-md-6">
-        <h1 class="mb-4">Contáctanos</h1>
-        <form action="#" method="post">
-          <div class="form-group">
-            <label for="nombre">Nombre Completo</label>
-            <input type="text" class="form-control" id="nombre" name="nombre" required>
-          </div>
-          <div class="form-group">
-            <label for="email">Correo Electrónico</label>
-            <input type="email" class="form-control" id="email" name="email" required>
-          </div>
-          <div class="form-group">
-            <label for="mensaje">Mensaje</label>
-            <textarea class="form-control" id="mensaje" name="mensaje" rows="4" required></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
-        </form>
-      </div>
-      <!-- Mapa Estático -->
-      <div class="col-md-6">
-        <h1 class="mb-4">Nuestra Ubicación</h1>
-        <img src="img/mapa-estatico.jpg" alt="Mapa de Ubicación" class="img-fluid rounded">
-      </div>
+<!-- Contenido de Contacto -->
+<main class="container my-5">
+  <div class="row">
+    <!-- Formulario de Contacto -->
+    <div class="col-md-6">
+      <h1 class="mb-4">Contáctanos</h1>
+      <form action="#" method="post">
+        <div class="form-group">
+          <label for="nombre">Nombre Completo</label>
+          <input type="text" class="form-control" id="nombre" name="nombre" required>
+        </div>
+        <div class="form-group">
+          <label for="email">Correo Electrónico</label>
+          <input type="email" class="form-control" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+          <label for="mensaje">Mensaje</label>
+          <textarea class="form-control" id="mensaje" name="mensaje" rows="4" required></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
+      </form>
     </div>
-  </main>
 
-  <!-- Footer (sin cambios) -->
-  <footer class="footer bg-dark text-white py-4">
-    <div class="container text-center">
-      <p>&copy; 2025 FastGo. Todos los derechos reservados.</p>
+    <!-- Mapa interactivo -->
+    <div class="col-md-6">
+      <h1 class="mb-4">Nuestra Ubicación</h1>
+      <div id="map"></div> <!-- Aquí se renderiza el mapa -->
     </div>
-  </footer>
+  </div>
+</main>
 
-  <!-- Scripts corregidos -->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
+<!-- Footer -->
+<footer class="footer bg-dark text-white py-4">
+  <div class="container text-center">
+    <p>&copy; 2025 FastGo. Todos los derechos reservados.</p>
+  </div>
+</footer>
+
+<!-- Scripts -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
+
+<script>
+  // Crear el mapa
+  var map = L.map('map').setView([-33.58567024020288, -70.58089218447837], 15); // Coordenadas para la ubicación
+
+  // Cargar OpenStreetMap con Leaflet
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+  }).addTo(map);
+
+  // Crear un marcador en la ubicación
+  var marker = L.marker([-33.58567024020288, -70.58089218447837]).addTo(map);
+
+  // Ventana emergente con información
+  marker.bindPopup("<b>FastGo</b><br>Ubicación de FastGo").openPopup();
+</script>
+
 </body>
 </html>
+
