--- a/servicios.html
+++ b/servicios.html
@@ -13,6 +13,7 @@
   <!-- Fuente de Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">  
 </head>
+
 <body>
 <!-- Navbar (idéntico a tu versión) -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
@@ -135,5 +136,16 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
+
+  <script>
+    document.querySelectorAll('.card-footer small.text-muted').forEach(el => {
+      let icon = '💲'; // Por defecto
+      if (el.textContent.includes('Gratis')) icon = '🎁';
+      if (el.textContent.includes('Consulta precios')) icon = '📦';
+      el.innerHTML = `${icon} ${el.textContent}`;
+    });
+  </script>
+</body>
+
 </body>
 </html>
